# llm-testgen-bench

./: .gitattributes  .gitignore  DECISIONS.md  Makefile  README.md  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh  verify.py
corpus/tasks/t01_paginate_slice/: impl.py  meta.yaml
corpus/tasks/t02_chunk_list/: impl.py  meta.yaml
corpus/tasks/t03_range_overlap/: impl.py  meta.yaml
corpus/tasks/t04_last_index_of/: impl.py  meta.yaml
corpus/tasks/t05_first_non_empty/: impl.py  meta.yaml
corpus/tasks/t06_truncate_middle/: impl.py  meta.yaml
corpus/tasks/t07_casefold_dedupe/: impl.py  meta.yaml
corpus/tasks/t08_grapheme_len/: impl.py  meta.yaml
corpus/tasks/t09_count_words/: impl.py  meta.yaml
corpus/tasks/t10_cents_sum/: impl.py  meta.yaml
corpus/tasks/t11_percent_split/: impl.py  meta.yaml
corpus/tasks/t12_price_with_tax/: impl.py  meta.yaml
corpus/tasks/t13_sort_by_key_copy/: impl.py  meta.yaml
corpus/tasks/t14_rotate_left/: impl.py  meta.yaml
corpus/tasks/t15_dedupe_preserve/: impl.py  meta.yaml
corpus/tasks/t16_stable_rank/: impl.py  meta.yaml
corpus/tasks/t17_group_by_stable/: impl.py  meta.yaml
corpus/tasks/t18_top_n_ties/: impl.py  meta.yaml
corpus/tasks/t19_semver_compare/: impl.py  meta.yaml
llm_testgen_bench/: __init__.py  cli.py  config.py  corpus.py  generate.py  mutate.py  ollama_client.py  report.py  sandbox.py  score.py  testing.py
prompts/: generate_tests.txt
results/: leaderboard.md
tests/: conftest.py  test_corpus_sanity.py  test_extraction.py  test_mutate.py  test_sandbox.py  test_score.py  test_variance.py
(+4 files in other folders)
